# differentiable-growth-distance

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  dgd_distance_bm.cc  growth_distance_bm.cc  mesh_load_test.cc
benchmarks/internal_helpers/: CMakeLists.txt  debug.h  filesystem_utils.h  math_utils.h  mesh_loader.cc  mesh_loader.h  random_utils.h  set_generator.cc  set_generator.h
cmake/: FindQhull.cmake  dgdConfig.cmake.in
docs/: Usage.md
include/dgd/: data_types.h  debug.h  dgd.h  dgd_halfspace.h  error_metrics.h  graham_scan.h  growth_distance.h  io.h  mesh_loader.h  output.h  sets.h  settings.h  utils.h
include/dgd/geometry/: convex_set.h  geometry_2d.h  geometry_3d.h  geometry_utils.h  halfspace.h
include/dgd/geometry/2d/: ellipse.h  polygon.h  rectangle.h
include/dgd/geometry/3d/: cone.h  cuboid.h  cylinder.h  ellipsoid.h  frustum.h  mesh.h  polytope.h
include/dgd/geometry/xd/: capsule.h  polytope.h  sphere.h
include/dgd/solvers/: bundle_scheme_2d.h  bundle_scheme_3d.h  bundle_scheme_impl.h  debug.h  derivative_impl.h  dgd_halfspace_impl.h  gd_halfspace_impl.h  minimum_distance_impl.h  solver_options.h  solver_settings.h  solver_types.h  solver_utils.h  utils.h
include/dgd/utils/: numerical_differentiation.h  random.h  timer.h  transformations.h
python/: .gitignore  CMakeLists.txt  README.md  generate_stubs.py  pyproject.toml
python/dgd/: __init__.py  _dgd_core.pyi
python/src/: algorithms.cc  binding_helpers.h  bindings.cc  geometry.cc  geometry_concrete.cc  output.cc  settings.cc  types.cc  utils.cc
python/tests/: __init__.py  conftest.py  test_algorithms.py  test_error_metrics.py  test_geometry_base.py  test_geometry_concrete.py  test_output.py  test_settings.py  test_types.py  test_utils.py
src/: CMakeLists.txt  dgd.cc  graham_scan.cc  mesh_loader.cc
src/utils/: numerical_differentiation.cc
tests/: CMakeLists.txt  geometry_test.cc  gradient_test.cc  graham_scan_test.cc  growth_distance_test.cc  kkt_nullspace_test.cc  local_geometry_test.cc  mesh_loader_test.cc  projection_derivative_test.cc  solution_derivative_test.cc  support_function_test.cc  test_utils.h  utils_test.cc
